--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,7 +3,11 @@
 one:
   email_address: one@example.com
   password_digest: <%= password_digest %>
+  organization: one
+  role: admin
 
 two:
   email_address: two@example.com
   password_digest: <%= password_digest %>
+  organization: two
+  role: admin
